--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* 
-@author: Madeleine Waldie
-@version: November 17, 2018
+/*
+@author:
+@version: 
 */
 
 body
@@ -49,7 +49,7 @@ img
     padding: 0px 30px 30px 0px;
 }
 
-li 
+li
 {
     color: #000000;
     display: inline-block;
