--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*
 @author:
-@version: 
+@version:
 */
 
 body
@@ -30,18 +30,27 @@ h2
 {
     color: #000000;
     font-family: Times;
+    font-weight: 300;
+    text-align: left;
+    padding-left: 30px;
 }
 
 h3
 {
     color: #000000;
     font-family: Times;
+    font-weight: 300;
+    text-align: left;
+    padding-left: 30px;
 }
 
 h4
 {
     color: #000000;
     font-family: Times;
+    font-weight: 300;
+    text-align: left;
+    padding-left: 30px;
 }
 
 img
@@ -68,7 +77,10 @@ p
 {
     color: #000000;
     font-family: Times;
-    font-size: 12px;
+    font-size: 16px;
+    padding: 0px 30px 0px 30px;
+    text-align: left;
+    padding-left: 30px;
 }
 
 .navigationBar {
