added map3, worked on readme, updated search & resources, updated header

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ h4
     font-weight: 300;
     text-align: left;
     padding-left: 30px;
+    font-size: 18px;
 }
 
 img
@@ -83,6 +84,16 @@ p
     padding-left: 30px;
 }
 
+a
+{
+  color: #000000;
+  font-family: Times;
+  font-size: 16px;
+  padding: 0px 30px 0px 30px;
+  text-align: left;
+  padding-left: 30px;
+}
+
 .navigationBar {
     box-sizing: border-box;
     overflow: auto;
@@ -91,4 +102,12 @@ p
     top: 0;
     width: 100%;
     z-index: 999;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+table.center {
+  margin-left: auto;
+  margin-right: auto;
 }
