--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,14 @@ a
     z-index: 999;
 }
 
-table, th, td {
+table {
   border: 1px solid black;
   width: 100%;
 }
+th, tr{
+  text-align: center;
+}
+
 table.center {
   margin-left: auto;
   margin-right: auto;
